[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["fs"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
actix-cors = "0.7.0"

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
strip = true
lto = true
